test/data/fail/literals/template.js
`\1`;
//<>
`\8`;
//<>
`\01`;
//<>
`\377`;
//<>
`\01`;
//<>
`\1`;
//<>
// not-escape sequences
`\x`;
//<>
`\xg`;
//<>
`\x0g`;
//<>
`\u`;
//<>
`\ug`;
//<>
`\u0g`;
//<>
`\u00g`;
//<>
`\u000g`;
//<>
`\u{`;
//<>
`\u{g`;
//<>
`\u{0g`;
//<>
`\u{00g`;
//<>
`\u{000g`;
//<>
`\u{0000g`;
//<>
`\u{00000g`;
//<>
`\u{110000}`;
